Created a websocket server and client

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Websocket example</h1>
+<html>
+  <head></head>
+  <body></body>
+  <script>
+    let ws;
+    const proto = window.location.protocol === "https:" ? "wss" : "ws";
+    ws = new WebSocket(`${proto}://${window.location.host}`); // Gives the domain name back
+
+    ws.onmessage = (event) => console.log(event.data);
+  </script>
+</html>
